<resources>
    <string name="app_name">Aly Fas5any Server</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_orders">Orders</string>
    <string name="fail_sign_in">Failed to sign In</string>
    <string name="your_name">Enter your name</string>
    <string name="your_address">Enter your Address</string>
    <string name="phone_number">Enter phone number</string>
    <string name="register">Register</string>
    <string name="fill_all_info">Please fill all info. \n Admin will accept you account later</string>
    <string name="cancel">Cancel</string>
    <string name="congratulations_regiser">Congratulation ! Register Success</string>
    <string name="must_be_allowed">You must be Allowed from Admin</string>
    <string name="menu_categories">Categories</string>
    <string name="update">Update</string>
    <string name="fill_info">Please fill information</string>
    <string name="category_name">Category Name</string>
    <string name="select_pic">Select picture</string>
    <string name="uploading">Uploading.....</string>
    <string name="update_success">Update Success</string>
    <string name="delete">Delete</string>
    <string name="do_u_want_delete">Do You Want to delete this item ?</string>
    <string name="delete_success">Delete Success</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food price</string>
    <string name="food_description">Food Description</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="hey">"Hey : "</string>
    <string name="yes">yes</string>
    <string name="want_sign_out">Do you want to sign out ?</string>
    <string name="sign_out">Sign out</string>
    <string name="order_date">"Order date : "</string>
    <string name="order_status">Order Status :</string>
    <string name="name">Name: </string>
    <string name="item_num">Number of items :</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="shipping">shipping</string>
    <string name="placed">placed</string>
    <string name="shipped">Shipped</string>
    <string name="order_placed">Order Placed (0)</string>
    <string name="orders_num_cos">Orders(</string>
    <string name="orders_number_str">)</string>
    <string name="update_order">Update Order</string>
    <string name="update_order_status">Update Order Status</string>
    <string name="status_placed">"Status:  Placed "</string>
    <string name="ok">OK</string>
    <string name="restore_placed">Restore Placed</string>
    <string name="call">Call</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="you_must_accept">You Must Accept</string>
    <string name="do_you_want_delete_order">\"Do You really want to delete this order ? \"</string>
    <string name="order_deleted">Order Has been deleted</string>
    <string name="order_status_cos">Order Status (</string>
    <string name="update_order_success">update order success</string>
    <string name="order_detail">Order Detail</string>
    <string name="print">Print</string>
    <string name="quantity_1">الكميه: </string>
    <string name="size_by_order">Order By: </string>
    <string name="price_per_kilo">price per Kilo: </string>
    <string name="total_price">Total Price :</string>
    <string name="default_notification_channel_id">simpelexo_alyfas5anyclient_v3</string>
    <string name="your_order_updated">Your Order Was Updated</string>
    <string name="was_updated">Was Updated</string>
    <string name="ur_order">Your Order</string>
    <string name="update_order_success_notfication_fail">Update Order Success But Failed To send Notification</string>
    <string name="address">"Address "</string>
    <string name="text_size">14</string>
    <string name="comment">Comment :</string>
</resources>