<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:paddingRight="24dp"
    android:paddingLeft="24dp"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_title"
        android:text="@string/update_order"
        android:textSize="32sp"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_title_small"
        android:layout_below="@id/txt_title"
        android:text="@string/update_order_status"
        android:textSize="22sp"
        android:textColor="@android:color/darker_gray"/>
    <TextView
        android:layout_below="@id/txt_title_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_status"
        android:text="@string/status_placed"
        android:textSize="22sp"
        android:textColor="@android:color/darker_gray"/>
    <RadioGroup
        android:id="@+id/rdi_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_status"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdi_shipping"
            android:text="@string/shipping"
            android:checked="true"
            android:textSize="22sp"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdi_canceled"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_red_dark"
            android:checked="true"
            android:textSize="22sp"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rdi_group"
        android:gravity="right"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_ok"
            android:padding="8dp"
            android:text="@string/ok"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>