<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_title"
        android:text="@string/order_detail"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@android:color/black"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_order_detail"
        android:layout_below="@+id/txt_title"
        android:layout_above="@+id/layout_button"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_button"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:id="@+id/btn_print"
            android:textStyle="bold"
            android:text="@string/print"
            android:textColor="@android:color/holo_orange_dark"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:id="@+id/btn_ok"
            android:text="@string/ok"
            android:textColor="@android:color/holo_red_dark"/>


    </LinearLayout>

</RelativeLayout>