<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_food_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:scaleType="fitXY"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical"
            android:layout_marginStart="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_order_number"
                android:text="29/11/2020 13:02:06"
                android:textColor="@android:color/holo_blue_light"
                android:textStyle="italic"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_time"
                android:text="Order date: assssdadsssad"
                android:textColor="@android:color/holo_blue_light"
                android:textStyle="italic"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_name"
                android:text="Name: Mohamed"
                android:textStyle="italic"
                android:textSize="16sp"/>
              <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_order_status"
                android:text="Status: Placed"
                android:textStyle="italic"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_num_item"
                android:text="Number of items : 12"
                android:textStyle="italic"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_total_payment"
                android:text="@string/total_price"
                android:textStyle="italic"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_comment"
                android:maxLines="3"
                android:text="@string/comment"
                android:textStyle="italic"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_address"
                android:maxLines="3"
                android:text="@string/address"
                android:textStyle="italic"
                android:textSize="16sp"/>




        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>