<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_food_image"
            android:layout_weight="3"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_food_name"
                android:text="Food Name"
                android:textColor="@android:color/holo_blue_light"
                android:textStyle="italic"
                android:textSize="16sp"/>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"

              android:weightSum="3"
              >
              <androidx.appcompat.widget.AppCompatImageButton
                  android:id="@+id/img_btn_update_quantity"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:src="@drawable/ic_baseline_cloud_upload_24"
                  android:tint="@android:color/holo_blue_light"
                  />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txt_food_quantity"
                    android:hint="@string/quantity_1"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    />

              <TextView
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:id="@+id/txt_quantity_view"
                  android:text="@string/quantity_1"
                  android:gravity="center"

                  />

          </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_size"
                android:text="@string/size_by_order"
                android:textStyle="italic"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_food_price"
                android:text="@string/price_per_kilo"
                android:textStyle="italic"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_total_item_price"
                android:text="@string/price_per_kilo"
                android:textStyle="italic"
                android:textSize="16sp"/>



        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>